# mechanical_arm_5_0_SDK

./: README.md
code/src/: gcc.sh  keyboard_controll  keyboard_controll.cpp  move_sov  robot_server  robot_server.cpp  robot_server.h  server_main.cpp
code_new_sdk/: CMakeLists.txt
code_new_sdk/include/: Ti5BASIC.h  Ti5CAN_Driver.h  Ti5LOGIC.h  Ti5MOVE.h  clamping_jaw.h  communication.h  drag_drop.h  example.h  key_event.h  mathfunc.h  socket_client.h  socket_service.h  test.txt  test_2.txt  tool.h
code_new_sdk/policy/: policy.onnx
code_new_sdk/src/: gcc.sh  keyboard_controll.cpp  main.cpp  move_origin  move_origin.cpp  onnx_socket_robot.cpp  read_onnx.cpp  robot_main.cpp  robot_server  robot_server.cpp  robot_server.h  server_main.cpp  socket_robot.cpp  socket_server.cpp  socket_server.h  test_policy.cpp
机械臂使用/: README.md
